--- a/styles/base.css
+++ b/styles/base.css
@@ -2,10 +2,8 @@ body{
     font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
-.yarndings {
-  font-family: "Yarndings 20", system-ui;
-  font-weight: 400;
-  font-style: normal;
+header{
+    color: #eee;
 }
 
 nav{
@@ -27,17 +25,83 @@ nav a:hover{
 }
 
 main{
-    background-color: beige;
     display: grid;
-    justify-content: center;
-    max-width: 800px;
+    max-width: 1000px;
+    margin: 0 auto;
+    grid-template-columns: auto auto;
 }
 
+h1{
+    grid-column: 1/3;
+    text-align: center;
+}
+
+h2{
+    color: #eee;
+    text-align: center;
+    background-color:  rgb(43, 43, 211);
+    margin:auto;
+    padding: 10px;
+    border-radius: .75rem .75rem 0 0;
+
+}
+
+img{
+    width: 200px;
+    height: auto;
+}
+
+footer{
+    background-color: rgb(43, 43, 211);
+    color: #eee;
+    text-align: center;
+    padding: 10px;
+}
+
+/* Classes */
+.yarndings {
+  font-family: "Yarndings 20", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.card {
+    border: 1px solid black;
+    border-radius: .75rem;
+    background-color: #eee;
+    margin: 10px;
+    
+}
+
+.card > div{
+    padding: 10px;
+}
+
+.floatleft{
+    float: left;
+    padding-right: 10px;
+}
+
+.floatright{
+    float: right;
+    padding-left: 10px;
+}
+
+.nofloat{
+        clear: both;
+}
+
+.align_center{
+    display: grid;
+    height: 80%;
+    align-items: center;
+}
+
+/* Ids */
 #course-title{
     display: block;
     text-align: center;
-    background-color: rgb(60, 60, 210);
-    color: #eee;
+    background-color: rgb(43, 43, 211);
     padding: 2rem;
     font-size: xx-large;
 }
