--- a/styles/temples.css
+++ b/styles/temples.css
@@ -10,17 +10,41 @@ header{
     justify-content: space-between;
 }
 
+main{
+    max-width: 800px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+figure{
+    margin: 0 auto;
+    text-align: center;
+    margin: 1rem;
+}
+
+h1{
+    text-align: center;
+}
+
 nav{
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 nav a{
     margin: 1rem;
-    flex: auto;
     text-align: center;
     color: #eee;
     text-decoration: none;
+}
+
+nav a:hover{
+    margin: .75rem;
+    font-size: larger;
+    border: 1px aquamarine solid;
+    color: aquamarine;
 }
 
 footer{
@@ -33,6 +57,7 @@ footer{
 .header{
     padding-right: 10px;
     margin: 1rem;
+    font-size: xx-large;
 }
 
 .yarndings {
