--- a/styles/places.css
+++ b/styles/places.css
@@ -7,7 +7,35 @@
 
 body{
     font-family: "Roboto", Arial, Helvetica, sans-serif;
+    display: grid;
+    justify-content: center;
 }
+
+@media screen and (min-width: 800px){
+    header,main,footer{
+        max-width: 1000px;
+    }
+
+    .data{
+        position: absolute;
+        top: 10px;
+        left: 20px;
+    }
+
+    .data h2{
+        grid-column: 1/3;
+        position: relative;
+        left: -10px;
+        margin: auto;
+        margin-left: 0;
+        padding: 10px;
+        color: var(--color-main);
+        background-color: var(--background-second);
+    }
+}
+
+
+
 
 header{
     color: var(--color-main);
@@ -15,11 +43,47 @@ header{
     text-align: center;
 }
 
+main{
+    position: relative;
+}
+
+img{
+    width: 100%;
+    height: auto;
+}
+
 footer{
     background-color: var(--background-main);
     color: var(--color-main);
     text-align: center;
     padding: 10px;
+}
+
+.data{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: var(--color-main);
+    color: var(--color-second);
+    padding: 10px;
+    gap: 10px;
+}
+
+.data h2{
+    text-align: center;
+    grid-column: 1/3;
+}
+
+.data label{
+    text-align: right;
+    margin: auto 0;
+}
+
+.data p {
+    margin: 0;
+}
+
+.weatherIcon {
+    width: 50px;
 }
 
 .yarndings {
