--- a/styles/places.css
+++ b/styles/places.css
@@ -42,10 +42,10 @@ footer{
     gap: 10px;
 }
 
-h2{
+h2, .weather img{
+    margin: 0 auto;
     text-align: center;
     grid-column: 1/3;
-    opacity: 100%;
 }
 
 label{
@@ -55,14 +55,6 @@ label{
 
 p {
     margin: 0;
-}
-
-.weather h2::after{
-    content: url("../images/weather_icon.svg");
-    display: block;
-    width: 30px;
-    height: 30px;
-    margin: 0 auto;
 }
 
 .yarndings {
