--- a/styles/places-large.css
+++ b/styles/places-large.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 800px){
-    header,main,footer{
-        max-width: 1000px;
-    }
+    /* body, header, main, footer{
+        width: 100%;
+    } */
 
     .data{
         position: absolute;
@@ -17,7 +17,7 @@
         opacity: 90%;
     }
 
-    h2, h2{
+    h2{
         grid-column: 1/3;
         position: relative;
         left: -20px;
