--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -11,18 +11,30 @@ header{
 }
 
 main{
-    max-width: 800px;
-    margin: 0 auto;
+    margin: 0 auto;  
+}
+
+main div{
     display: grid;
     grid-template-columns: 1fr;
+    gap: 1rem;
 }
 
-figure{
-    text-align: center;
+section{
+    background-color: #ddd;
+    border: 1px solid #ccc;
+    margin: auto;
+    height: 100%;
+}
+
+img{
+    display: block;
+    max-width: 400px;
     margin: 1rem;
+    box-shadow: 5px 5px 10px #222;
 }
 
-h1{
+h1, h2, p{
     text-align: center;
 }
 
