--- a/styles/form-small.css
+++ b/styles/form-small.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    min-width: 320px;
+    min-width: 304px;
     background-color: var(--color1);
 }
 
@@ -13,8 +13,6 @@ header{
     color: var(--color1);
     padding: 10px;
 }
-
-
 
 h1{
     text-align: center;
@@ -32,8 +30,12 @@ input[type="radio"],
 input[type="text"],
 input[type="date"],
 textarea{
+    box-sizing: border-box;
     display: block;
-    width: 100%;
+    width:100%;
+    border-radius: 6px;
+    padding: .5rem;
+    margin: .5rem 0;
 }
 
 input[type="radio"]{
@@ -42,12 +44,18 @@ input[type="radio"]{
 
 label:has(input[type="checkbox"]){
     display: block;
+}
 
+.required{
+    color:red;
 }
 
 input[type="submit"]{
     display: block;
-    margin: auto;
+    margin: .5rem auto;
+    border-radius: 6px;
+    padding: .5rem;
+
 }
 
 .stars{
@@ -63,4 +71,8 @@ input[type="submit"]{
   font-family: "Yarndings 20", system-ui;
   font-weight: 400;
   font-style: normal;
+}
+
+.section{
+    margin-top: 1rem;
 }
