--- a/styles/form-small.css
+++ b/styles/form-small.css
@@ -76,3 +76,19 @@ input[type="submit"]{
 .section{
     margin-top: 1rem;
 }
+
+.thankyou{
+    text-align: center;
+    font-size: larger;
+    font-weight: bolder;
+    
+}
+
+table{
+    margin: 1rem auto;
+}
+
+td{
+    border: 1px solid black;
+    padding: 5px;
+}
