--- a/styles/form-small.css
+++ b/styles/form-small.css
@@ -47,7 +47,7 @@ label:has(input[type="checkbox"]){
 }
 
 .required{
-    color:red;
+    color:#ff0000;
 }
 
 input[type="submit"]{
@@ -89,6 +89,6 @@ table{
 }
 
 td{
-    border: 1px solid black;
+    border: 1px solid #000;
     padding: 5px;
 }
