--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -35,7 +35,7 @@ footer{
 }
 
 .yarndings {
-  font-family: "Yarndings 20", system-ui;
+  font-family: "Yarndings 20", serif;
   font-weight: 400;
   font-style: normal;
 }
