--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -30,6 +30,22 @@ main{
     background-color: #eee;
 }
 
+figure{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+img{
+    margin: 0 auto;
+   
+}
+
+figcaption{
+    width: 100%;
+    text-align: center;
+}
+
 footer{
     background-color: #2b2bd3;
     color: #eee;
